--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <title>Who is CatMeooww10?</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="Icons/catmeooww.png" type="image/png">
 </head>
 
 <body>
@@ -17,8 +18,11 @@
             <h1>Who is CatMeooww10?</h1>
             <hr>
             <div id="catmeowdiv" class="col-md-6">
-                <img src="Icons/catmeooww.png" width="400">
+                <img src="Icons/catmeooww.png" width="376">
                 <p>My name is Cat Meooww, I am a developer of Minecraft mods, websites and games</p>
+                <div class="Projects">
+                    <a href="about.html" target="_blank">More About Me</a>
+                </div>
             </div>
             <div id="projects" class="col-md-6">
                 <h3>My Projects</h3>
@@ -35,9 +39,16 @@
                 </div>
                 <br>
                 <div class="Projects">
+                    <a href="https://catmeooww.github.io/Jumping-Around/" target="_blank">Jumping Around</a>
+                </div>
+                <br>
+                <div class="Projects">
                     <a href="https://www.curseforge.com/minecraft/mc-mods/crafty-world" target="_blank">Crafty World Mod</a>
                 </div>
                 <br>
+                <div class="Projects">
+                    <a href="catmeoowwProjects.html" target="_blank">More</a>
+                </div>
             </div>
         </center>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
