--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
             </div>
         </center>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <div style="border-top: solid aliceblue 1px;">
+        <div style="border-top: solid #ddeeff 1px;">
             <h4>Social Media</h4>
             <div style="display: inline;">
               <a href="http://www.youtube.com/@cat_meow1020" target="_blank"><img class="media" src="Icons/youtube.png"></a>
+              <a href="https://www.instagram.com/catmeooww10/" target="_blank"><img class="media" src="Icons/insta.png"></a>
+              <a href="https://github.com/catMeooww?tab=repositories" target="_blank"><img class="media" src="Icons/Github.png"></a>
             </div>
         </div>
     </div>
