--- a/about.html
+++ b/about.html
@@ -19,10 +19,13 @@
     </div>
     <div class="col-md-6">
         <center>
-            <p style="color: aliceblue;">My name is Cat Meooww, I Started to develop at 13 years old. I Created some
+            <p style="color: #ddeeff;">My name is Cat Meooww, I Started to develop at 13 years old. I Created some
                 cool websites: like Minecraft Lists, Minecraft World Community, Minecraft Utilities. I Created some
                 games too: Jumping Around, Survival Plains (still in development). Some Minecraft Mods: Crafty World.
                 And I pretent to create a lot of other thing in the future!</p>
+            <br>
+            <p style="color: #ddeeff;">You can see that many of my projects are related to Minecraft, this is because it
+                is my favourite game!</p>
         </center>
     </div>
 </body>
