--- a/catmeoowwProjects.html
+++ b/catmeoowwProjects.html
@@ -29,6 +29,9 @@
                 <a title="Minecraft Listing" href="https://catmeooww.github.io/Minecraft-Listing/"><img
                                 src="otherSites/Minecraft Listing Background.jpg" class="MCSites" width="300"
                                 height="200"></a>
+                <a title="Minecraft Utilities" href="https://catmeooww.github.io/Minecraft-Utilities/"><img
+                                src="otherSites/MC-Utilities_bg.jpg" class="MCSites" width="300"
+                                height="200"></a>
                 <a title="Minecraftpédia" href="https://catmeooww.github.io/MinecraftPedia/"><img
                                 src="otherSites/Minecraftpedia Background.jpg" class="MCSites" width="300"
                                 height="200"></a>
