--- a/catmeoowwProjects.html
+++ b/catmeoowwProjects.html
@@ -24,14 +24,16 @@
                 <a title="Minecraft World Community" href="https://catmeooww.github.io/MinecraftWorldCommunity/"><img
                                 src="otherSites/Minecraft Community Background.jpg" class="MCSites" width="300"
                                 height="200"></a>
+                <a title="GameCord" href="https://catmeooww.github.io/GameCord/"><img
+                                src="otherSites/GameCordBg.png" class="MCSites" width="300"
+                                height="200"></a>
                 <a title="Minecraft Filter" href="https://catmeooww.github.io/Minecraft-Filter/"><img
                                 src="otherSites/Mobs.png" class="MCSites" width="300" height="200"></a>
                 <a title="Minecraft Listing" href="https://catmeooww.github.io/Minecraft-Listing/"><img
                                 src="otherSites/Minecraft Listing Background.jpg" class="MCSites" width="300"
                                 height="200"></a>
                 <a title="Minecraft Utilities" href="https://catmeooww.github.io/Minecraft-Utilities/"><img
-                                src="otherSites/MC-Utilities_bg.jpg" class="MCSites" width="300"
-                                height="200"></a>
+                                src="otherSites/MC-Utilities_bg.jpg" class="MCSites" width="300" height="200"></a>
                 <a title="Minecraftpédia" href="https://catmeooww.github.io/MinecraftPedia/"><img
                                 src="otherSites/Minecraftpedia Background.jpg" class="MCSites" width="300"
                                 height="200"></a>
