--- a/catmeoowwProjects.html
+++ b/catmeoowwProjects.html
@@ -15,6 +15,9 @@
         <h1 class="title">VIEW ALL MY PROJECTS</h1>
         <hr>
         <center>
+                <a title="Crafty Hub" href="https://catmeooww.github.io/Crafty-Hub/"><img
+                        src="otherSites/CraftyForums.png" class="MCSites" width="300"
+                        height="200"></a>
                 <a title="Minecraft Builders Blog" href="https://catmeooww.github.io/Minecraft-Builder-Blog/"><img
                                 src="otherSites/BuildersBlog Background.png" class="MCSites" width="300"
                                 height="200"></a>
@@ -44,6 +47,7 @@
                 <a title="Minecraft Ai" href="https://catmeooww.github.io/MinecraftAi/"><img
                                 src="otherSites/aicraft_bg.png" class="MCSites" width="300" height="200"></a>
         </center>
+        <br><br>
 </body>
 
 </html>
