added games section

--- a/catmeoowwProjects.html
+++ b/catmeoowwProjects.html
@@ -12,12 +12,13 @@
 </head>
 
 <body background="Icons/StoneBg.png">
-        <h1 class="title">VIEW ALL MY PROJECTS</h1>
+        <div style="background-color: rgba(0, 0, 0, 0.500);border: outset 5px rgba(0, 0, 0, 0.500);">
+                <h1 class="title">VIEW ALL MY PROJECTS</h1>
+        </div>
         <hr>
         <center>
                 <a title="Crafty Hub" href="https://catmeooww.github.io/Crafty-Hub/"><img
-                        src="otherSites/CraftyForums.png" class="MCSites" width="300"
-                        height="200"></a>
+                                src="otherSites/CraftyForums.png" class="MCSites" width="300" height="200"></a>
                 <a title="Minecraft Builders Blog" href="https://catmeooww.github.io/Minecraft-Builder-Blog/"><img
                                 src="otherSites/BuildersBlog Background.png" class="MCSites" width="300"
                                 height="200"></a>
@@ -27,9 +28,8 @@
                 <a title="Minecraft World Community" href="https://catmeooww.github.io/MinecraftWorldCommunity/"><img
                                 src="otherSites/Minecraft Community Background.jpg" class="MCSites" width="300"
                                 height="200"></a>
-                <a title="GameCord" href="https://catmeooww.github.io/GameCord/"><img
-                                src="otherSites/GameCordBg.png" class="MCSites" width="300"
-                                height="200"></a>
+                <a title="GameCord" href="https://catmeooww.github.io/GameCord/"><img src="otherSites/GameCordBg.png"
+                                class="MCSites" width="300" height="200"></a>
                 <a title="Minecraft Filter" href="https://catmeooww.github.io/Minecraft-Filter/"><img
                                 src="otherSites/Mobs.png" class="MCSites" width="300" height="200"></a>
                 <a title="Minecraft Listing" href="https://catmeooww.github.io/Minecraft-Listing/"><img
@@ -48,6 +48,13 @@
                                 src="otherSites/aicraft_bg.png" class="MCSites" width="300" height="200"></a>
         </center>
         <br><br>
+        <div style="background-color: rgba(0, 0, 0, 0.500);border: outset 5px rgba(0, 0, 0, 0.500);">
+                <h1 class="title">MY GAMES</h1>
+        </div>
+        <hr>
+                <div style="border: inset 2px green;text-align: center;width: 90%;margin:5%;background-color: black;">
+                        <a href="https://catmeooww.github.io/CatMeooww-GamingArea/">View CatMeooww Games Page!</a>
+                </div>
 </body>
 
 </html>
