Updated the Portfólio
- Updated Portfólio
- Moved "Jumping Around" to Games
- UI Style improve

--- a/catmeoowwProjects.html
+++ b/catmeoowwProjects.html
@@ -8,10 +8,14 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <title>CatMeooww10 Projects</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" href="Icons/catmeooww.png" type="image/png">
+        <link rel="shortcut icon" href="Icons/CatMeooww.jpg" type="image/png">
 </head>
 
 <body background="Icons/StoneBg.png">
+        <div style="background-color: rgba(0, 0, 0, 0.500);border: outset 5px rgba(0, 0, 0, 0.500);text-align: center;">
+                <a href="index.html">About CatMeooww10</a>
+        </div>
+        <hr>
         <div style="background-color: rgba(0, 0, 0, 0.500);border: outset 5px rgba(0, 0, 0, 0.500);">
                 <h1 class="title">VIEW ALL MY PROJECTS</h1>
         </div>
@@ -40,8 +44,6 @@
                 <a title="Minecraftpédia" href="https://catmeooww.github.io/MinecraftPedia/"><img
                                 src="otherSites/Minecraftpedia Background.jpg" class="MCSites" width="300"
                                 height="200"></a>
-                <a title="Jumping Around" href="https://catmeooww.github.io/Jumping-Around/"><img
-                                src="otherSites/slime.png" class="MCSites" width="300" height="200"></a>
                 <a title="Crafty World" href="https://www.curseforge.com/minecraft/mc-mods/crafty-world"><img
                                 src="otherSites/crafty_world_bg.png" class="MCSites" width="300" height="200"></a>
                 <a title="Minecraft Ai" href="https://catmeooww.github.io/MinecraftAi/"><img
@@ -52,9 +54,17 @@
                 <h1 class="title">MY GAMES</h1>
         </div>
         <hr>
-                <div style="border: inset 2px green;text-align: center;width: 90%;margin:5%;background-color: black;">
-                        <a href="https://catmeooww.github.io/CatMeooww-GamingArea/">View CatMeooww Games Page!</a>
-                </div>
+        <div style="border: inset 2px green;text-align: center;width: 90%;margin:5%;background-color: black;padding: 5px;">
+                <a href="https://catmeooww.github.io/CatMeooww-GamingArea/">View CatMeooww Games Page!</a>
+        </div>
+        <hr>
+        <b id="catlabel" style="float: right;">@CatMeooww</b>
+        <script>
+                r = Math.floor(Math.random()*230) + 25;
+                g = Math.floor(Math.random()*230) + 25;
+                b = Math.floor(Math.random()*230) + 25;
+                document.getElementById("catlabel").style.color = "rgb("+r+","+g+","+b+")";
+        </script>
 </body>
 
 </html>
