--- a/about.html
+++ b/about.html
@@ -2,30 +2,31 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <title>CatMeooww10 About</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="Icons/catmeooww.png" type="image/png">
+    <link rel="shortcut icon" href="Icons/CatMeooww.jpg" type="image/jpg">
 </head>
 
 <body background="Icons/StoneBg.png">
     <h1 class="title">ABOUT ME</h1>
     <hr>
     <div class="col-md-6">
-        <img src="Icons/catmeooww.png" width="600">
+        <img src="Icons/CatMeooww.jpg" width="600">
     </div>
     <div class="col-md-6">
         <center>
             <p style="color: #ddeeff;">My name is Cat Meooww, I Started to develop at 13 years old. I Created some
                 cool websites: like Minecraft Lists, Minecraft World Community, Minecraft Utilities. I Created some
                 games too: Jumping Around, Survival Plains (still in development). Some Minecraft Mods: Crafty World.
-                And I pretent to create a lot of other thing in the future!</p>
+                And I want to create a lot of other things in the future!</p>
             <br>
             <p style="color: #ddeeff;">You can see that many of my projects are related to Minecraft, this is because it
                 is my favourite game!</p>
+
+            <p>Also, visit me in Crafty Hub</p>
         </center>
     </div>
 </body>
