--- a/catmeoowwProjects.html
+++ b/catmeoowwProjects.html
@@ -17,7 +17,7 @@
         </div>
         <hr>
         <div style="background-color: rgba(0, 0, 0, 0.500);border: outset 5px rgba(0, 0, 0, 0.500);">
-                <h1 class="title">VIEW ALL MY PROJECTS</h1>
+                <h1 class="title">CATMEOOWW10 WEB PROJECTS!</h1>
         </div>
         <hr>
         <center>
@@ -51,7 +51,7 @@
         </center>
         <br><br>
         <div style="background-color: rgba(0, 0, 0, 0.500);border: outset 5px rgba(0, 0, 0, 0.500);">
-                <h1 class="title">MY GAMES</h1>
+                <h1 class="title">CATMEOOWW10 GAMES</h1>
         </div>
         <hr>
         <div style="border: inset 2px green;text-align: center;width: 90%;margin:5%;background-color: black;padding: 5px;">
