--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <br>
                 <div class="Projects">
-                    <a href="https://catmeooww.github.io/Jumping-Around/" target="_blank">Jumping Around</a>
+                    <a href="https://catmeooww.github.io/Crafty-Hub/" target="_blank">Crafty Hub</a>
                 </div>
                 <br>
                 <div class="Projects">
@@ -46,7 +46,7 @@
                 </div>
                 <br>
                 <div class="Projects">
-                    <a href="catmeoowwProjects.html">More</a>
+                    <a href="catmeoowwProjects.html">More Projects</a>
                 </div>
             </div>
         </center>
@@ -54,7 +54,7 @@
         <div style="border-top: solid #ddeeff 1px;">
             <h4>Social Media</h4>
             <div style="display: inline;">
-              <a href="http://www.youtube.com/@cat_meow1020" target="_blank"><img class="media" src="Icons/youtube.png"></a>
+              <a href="https://www.youtube.com/@Cat_Meooww_10" target="_blank"><img class="media" src="Icons/youtube.png"></a>
               <a href="https://www.instagram.com/catmeooww10/" target="_blank"><img class="media" src="Icons/insta.png"></a>
               <a href="https://github.com/catMeooww?tab=repositories" target="_blank"><img class="media" src="Icons/Github.png"></a>
               <a href="https://catmeooww.github.io/Crafty-Hub/craftyUsers.html" target="_blank"><img class="media" src="Icons/craftyhub.png"></a>
