--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -11,13 +12,21 @@
 </head>
 
 <body background="Icons/StoneBg.png">
-    <h1 class="title">ABOUT ME</h1>
-    <hr>
-    <div class="col-md-6">
-        <img src="Icons/CatMeooww.jpg" width="600">
+    <div class="menu">
+        <a href="index.html">CatMeooww10 Page</a>
+        <span>|</span>
+        <a href="catmeoowwProjects.html">CatMeooww10 Projects</a>
     </div>
-    <div class="col-md-6">
-        <center>
+    <div class="titlecontainer">
+        <h1 class="title">ABOUT ME</h1>
+    </div>
+    <hr>
+    <center>
+        <div class="col-sm-12 col-md-6">
+            <img src="Icons/CatMeooww.jpg" style="width: 80%;">
+        </div>
+        <div class="col-sm-12 col-md-6">
+
             <p style="color: #ddeeff;">My name is Cat Meooww, I Started to develop at 13 years old. I Created some
                 cool websites: like Minecraft Lists, Minecraft World Community, Minecraft Utilities. I Created some
                 games too: Jumping Around, Survival Plains (still in development). Some Minecraft Mods: Crafty World.
@@ -26,9 +35,9 @@
             <p style="color: #ddeeff;">You can see that many of my projects are related to Minecraft, this is because it
                 is my favourite game!</p>
 
-            <p>Also, visit me in Crafty Hub</p>
-        </center>
-    </div>
+            <a href="https://catmeooww.github.io/Crafty-Hub/craftyUsers.html">Also, visit me in Crafty Hub</a>
+        </div>
+    </center>
 </body>
 
 </html>
