--- a/catmeoowwProjects.html
+++ b/catmeoowwProjects.html
@@ -12,11 +12,13 @@
 </head>
 
 <body background="Icons/StoneBg.png">
-        <div style="background-color: rgba(0, 0, 0, 0.500);border: outset 5px rgba(0, 0, 0, 0.500);text-align: center;">
-                <a href="index.html">About CatMeooww10</a>
+        <div class="menu">
+                <a href="index.html">CatMeooww10 Page</a>
+                <span>|</span>
+                <a href="about.html">About CatMeooww10</a>
         </div>
         <hr>
-        <div style="background-color: rgba(0, 0, 0, 0.500);border: outset 5px rgba(0, 0, 0, 0.500);">
+        <div class="titlecontainer">
                 <h1 class="title">CATMEOOWW10 WEB PROJECTS!</h1>
         </div>
         <hr>
@@ -50,12 +52,16 @@
                                 src="otherSites/aicraft_bg.png" class="MCSites" width="300" height="200"></a>
         </center>
         <br><br>
-        <div style="background-color: rgba(0, 0, 0, 0.500);border: outset 5px rgba(0, 0, 0, 0.500);">
+        <div class="titlecontainer">
                 <h1 class="title">CATMEOOWW10 GAMES</h1>
         </div>
         <hr>
-        <div style="border: inset 2px green;text-align: center;width: 90%;margin:5%;background-color: black;padding: 5px;">
+        <div style="border: inset 2px green;text-align: center;width: 90%;margin:5%;background-color: black;padding: 10px;">
                 <a href="https://catmeooww.github.io/CatMeooww-GamingArea/">View CatMeooww Games Page!</a>
+                <button onclick="showGames()" id="showGames" style="float: right;background-color: black;color: green;">+</button>
+        </div>
+        <div id="showingGames" style="text-align: center;visibility: hidden;">
+                
         </div>
         <hr>
         <b id="catlabel" style="float: right;">@CatMeooww</b>
@@ -64,6 +70,19 @@
                 g = Math.floor(Math.random()*230) + 25;
                 b = Math.floor(Math.random()*230) + 25;
                 document.getElementById("catlabel").style.color = "rgb("+r+","+g+","+b+")";
+
+                function showGames(){
+                        visible = document.getElementById("showingGames").style.visibility;
+                        if (visible == "hidden"){
+                                document.getElementById("showingGames").innerHTML = "<iframe style='border: goldenrod inset 2px;width: 85%;height: 300px;' src='https://catmeooww.github.io/CatMeooww-GamingArea/index.html#gameBox'></iframe>";
+                                document.getElementById("showingGames").style.visibility = "visible";
+                                document.getElementById("showGames").innerHTML = "-";
+                        }else{
+                                document.getElementById("showingGames").innerHTML = "";
+                                document.getElementById("showingGames").style.visibility = "hidden";
+                                document.getElementById("showGames").innerHTML = "+";
+                        }
+                }
         </script>
 </body>
 
