--- a/index.html
+++ b/index.html
@@ -12,18 +12,23 @@
 </head>
 
 <body style="background-color: #5656DA">
+    <div class="menu">
+        <a href="catmeoowwProjects.html">CatMeooww10 Projects</a>
+        <span>|</span>
+        <a href="about.html">About CatMeooww10</a>
+    </div>
     <div id="page">
         <center>
             <h1>The Developer - CatMeooww10</h1>
             <hr>
-            <div id="catmeowdiv" class="col-md-6">
+            <div id="catmeowdiv" class="col-sm-12 col-md-6">
                 <img src="Icons/CatMeooww.jpg" width="376">
                 <p>My name is Cat Meooww, I am a developer of Minecraft mods, websites and games</p>
                 <div class="Projects">
                     <a href="about.html">More About Me</a>
                 </div>
             </div>
-            <div id="projects" class="col-md-6">
+            <div id="projects" class="col-sm-12 col-md-6">
                 <h3>My Projects</h3>
                 <div class="Projects">
                     <a href="https://catmeooww.github.io/Minecraft-Listing/" target="_blank">Minecraft Listing</a>
