--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <div style="display: inline;">
               <a href="https://www.youtube.com/@Cat_Meooww_10" target="_blank"><img class="media" src="Icons/youtube.png"></a>
               <a href="https://www.instagram.com/catmeooww10/" target="_blank"><img class="media" src="Icons/insta.png"></a>
+              <a href="https://x.com/CatMeow40569237" target="_blank"><img class="media" src="Icons/catx.jpg"></a>
               <a href="https://github.com/catMeooww?tab=repositories" target="_blank"><img class="media" src="Icons/Github.png"></a>
               <a href="https://catmeooww.github.io/Crafty-Hub/craftyUsers.html" target="_blank"><img class="media" src="Icons/craftyhub.png"></a>
             </div>
