--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <title>CatMeooww10</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="Icons/CatMeooww.jpg" type="image/png">
+    <link rel="shortcut icon" href="Icons/CatMeooww.jpg" type="image/jpg">
 </head>
 
 <body style="background-color: #5656DA">
