--- a/catmeoowwProjects.html
+++ b/catmeoowwProjects.html
@@ -8,7 +8,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <title>CatMeooww10 Projects</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" href="Icons/CatMeooww.jpg" type="image/png">
+        <link rel="shortcut icon" href="Icons/CatMeooww.jpg" type="image/jpg">
 </head>
 
 <body background="Icons/StoneBg.png">
@@ -22,7 +22,7 @@
                 <h1 class="title">CATMEOOWW10 WEB PROJECTS!</h1>
         </div>
         <hr>
-        <center>
+        <center title="My Main Projects!">
                 <a title="Crafty Hub" href="https://catmeooww.github.io/Crafty-Hub/"><img
                                 src="otherSites/CraftyForums.png" class="MCSites" width="300" height="200"></a>
                 <a title="Minecraft Builders Blog" href="https://catmeooww.github.io/Minecraft-Builder-Blog/"><img
@@ -59,9 +59,9 @@
                 <h1 class="title">CATMEOOWW10 GAMES</h1>
         </div>
         <hr>
-        <div
+        <div    title="Click here to view Games!"
                 style="border: inset 2px green;text-align: center;width: 90%;margin:5%;background-color: black;padding: 10px;">
-                <a href="https://catmeooww.github.io/CatMeooww-GamingArea/">View CatMeooww Games Page!</a>
+                <a id="gamesAnchor" href="https://catmeooww.github.io/CatMeooww-GamingArea/">View CatMeooww Games Page!</a>
                 <button onclick="showGames()" id="showGames"
                         style="float: right;background-color: black;color: green;">+</button>
         </div>
@@ -69,6 +69,7 @@
 
         </div>
         <hr>
+        <p id="insidenews">Latest News: Crafty Adventure Update!</p>
         <b id="catlabel" style="float: right;">@CatMeooww</b>
         <script>
                 r = Math.floor(Math.random() * 230) + 25;
