--- a/catmeoowwProjects.html
+++ b/catmeoowwProjects.html
@@ -68,6 +68,14 @@
         <div id="showingGames" style="text-align: center;visibility: hidden;">
 
         </div>
+        <br><br>
+        <div class="titlecontainer">
+                <h1 class="title">STORIES</h1>
+        </div>
+        <hr>
+        <div id="stories">
+                <iframe src="more/The Crafty World-Lore.pdf"></iframe>
+        </div>
         <hr>
         <p id="insidenews">Latest News: Crafty Adventure Update!</p>
         <b id="catlabel" style="float: right;">@CatMeooww</b>
